--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -632,3 +632,23 @@ width: auto;
     justify-content: center;
     align-items: center;
 }
+.btn-order-registration{
+    height: 45px;
+    width: auto;
+    margin-left: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart-payment{
+    width: 300px;
+    height: 200px;
+    border: 1px solid black;
+    margin-right: 700px;
+}
+.count-order-item{
+    width: 100%;
+    height: 50px;
+    border: 1px solid red;
+}
