--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -642,13 +642,15 @@ width: auto;
 }
 
 .cart-payment{
-    width: 300px;
-    height: 200px;
-    border: 1px solid black;
+    width: 350px;
+    height: auto;
     margin-right: 700px;
+    box-shadow: 0 0 1px black;
+    padding: 10px;
 }
 .count-order-item{
     width: 100%;
     height: 50px;
-    border: 1px solid red;
+    display: flex;
+    justify-content: space-between;
 }
